updating pricetarck image

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                       <div class="content">
                         <!-- anchor trigger modal -->
                         <a href="#" data-toggle="modal" data-target="#Modal4">
-                            <img src="img/priceTrack__original.PNG" alt="priceTrack">
+                            <img src="img/pricetrack.PNG" alt="priceTrack">
                             </a>
                     </div>
                   </div>
